# Mafia

./: CMakeLists.txt  Command.cpp  Command.h  Formatter.cpp  Formatter.h  MyNetwork.cpp  MyNetwork.h  Player.cpp  Player.h  PlayerMessage.cpp  PlayerMessage.h  README.md  Room.cpp  Room.h  RoomState.cpp  RoomState.h  Server.cpp  Server.h  command.cpp  command.h  constants.h  formatter.cpp  formatter.h  main.cpp  my_network.cpp  my_network.h  network.cpp  network.h  player.cpp  player.h  player_message.cpp  player_message.h  room.cpp  room.h  room_state.cpp  server.cpp  server.h
credentials/: credentials
